@@ -43,9 +43,9 @@ Maybe we can give possible causes or solutions.</comment>
   </category>
   <category title="Scheduler" place="7">
     <item>
-      <attribute id="1208353502" priority="1" done="0" start_date="733148" enddate="99999999" notify="0" endtime="-60" last_edited="1208581738"/>
+      <attribute id="1208353502" priority="1" done="1" start_date="733148" completed_date="733290" notify="0" last_edited="1220627552"/>
       <summary>add a oneshot queue to Scheduler</summary>
-      <comment/>
+      <comment></comment>
     </item>
   </category>
 </gtodo>
