@@ -4,5 +4,4 @@ SUBDIRS = \
 	dashboard\
 	dtc_clearer\
 	dtc_reader\
-	live_data\
-	sensor_list
+	live_data
