@@ -1,7 +1,0 @@
-sensor_listdir = $(PLUGINDIR)/sensor_list
-
-sensor_list_PYTHON = \
-	sensor_list.py
-
-## File created by the gnome-build tools
-
